--- a/app/src/main/res/layout/activity_forgpass_input.xml
+++ b/app/src/main/res/layout/activity_forgpass_input.xml
@@ -7,6 +7,36 @@
     android:layout_height="match_parent"
     tools:context=".ui.forgot_password.ForgotpassInput">
 
+    <View
+        android:id="@+id/loadingView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#32000000"
+        android:clickable="true"
+        android:elevation="98dp"
+        android:focusable="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:elevation="99dp"
+        android:foregroundGravity="center"
+        android:indeterminateTint="@color/colorTertiary"
+        android:progressBackgroundTint="@color/colorTertiary"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/texto_inter_regular"
-            android:text="Por favor, digite seu email"
+            android:text="Por favor, digite seu telefone."
             android:textColor="@color/textColorSecondary"
             android:textSize="16sp" />
 
@@ -45,18 +75,18 @@
             android:layout_marginLeft="4dp"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/texto_inter_regular"
-            android:text="E-mail"
+            android:text="Telefone"
             android:textColor="@color/textColorPrimary" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/telefone"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_margin="4dp"
             android:background="@drawable/layout_input"
             android:elevation="2dp"
             android:fontFamily="sans-serif"
-            android:hint="Digite seu e-mail"
+            android:hint="+__ ____-____"
             android:paddingStart="16dp"
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
@@ -64,6 +94,17 @@
             android:textColor="#000000"
             android:textColorHint="@color/textColorSecondary"
             android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/erro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="8dp"
+            android:text="Erro inesperado"
+            android:textColor="@color/textColorSecondary"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <Button
             android:id="@+id/bntEnviarCod"
