--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_width="114dp"
+        android:layout_height="114dp"
         android:layout_gravity="center"
         android:elevation="99dp"
         android:foregroundGravity="center"
@@ -120,9 +120,9 @@
         android:backgroundTint="@color/colorSecondary"
         android:padding="0dp"
         android:src="@drawable/ic_icon_notification"
-        android:tint="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/chat_bot"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@android:color/white" />
 
     <ImageButton
         android:id="@+id/chat_bot"
