--- a/app/src/main/res/layout/fragment_dash.xml
+++ b/app/src/main/res/layout/fragment_dash.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
     tools:context=".ui.dash.DashFragment">
 
-    <LinearLayout
+    <!-- Scroll principal -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="8dp">
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
@@ -79,7 +83,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/titulo_poppins_regular"
-                        android:text="956"
+                        android:text="0"
                         android:textColor="@color/textColorPrimary"
                         android:textSize="18sp" />
 
@@ -141,7 +145,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/titulo_poppins_regular"
                         android:gravity="start"
-                        android:text="204"
+                        android:text="0"
                         android:textColor="@color/textColorPrimary"
                         android:textSize="18sp" />
 
@@ -189,7 +193,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/titulo_poppins_regular"
                         android:gravity="start"
-                        android:text="123"
+                        android:text="0"
                         android:textColor="@color/textColorPrimary"
                         android:textSize="18sp" />
 
@@ -238,7 +242,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/titulo_poppins_regular"
                         android:gravity="start"
-                        android:text="69"
+                        android:text="0"
                         android:textColor="@color/textColorPrimary"
                         android:textSize="18sp" />
 
@@ -287,7 +291,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/titulo_poppins_regular"
                         android:gravity="start"
-                        android:text="27"
+                        android:text="0"
                         android:textColor="@color/textColorPrimary"
                         android:textSize="18sp" />
 
@@ -363,7 +367,7 @@
                         android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/textView22"
+                        android:id="@+id/motMaisInfraQuant"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
@@ -402,7 +406,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/titulo_bold_poppins_semibold"
-                    android:text="Variação Anual"
+                    android:text="Variação Mensal"
                     android:textColor="@color/textColorPrimary"
                     android:textSize="19sp" />
 
@@ -411,14 +415,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/titulo_bold_poppins_semibold"
-                    android:text="+8,1%"
+                    android:text="+0,0%"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
                     android:textSize="20sp" />
 
 
             </LinearLayout>
-
         </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
@@ -484,5 +487,15 @@
         </LinearLayout>
 
     </LinearLayout>
+    </ScrollView>
 
-</ScrollView>
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="114dp"
+        android:layout_height="114dp"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/colorTertiary"
+        android:progressBackgroundTint="@color/colorTertiary"
+        android:visibility="visible" />
+</FrameLayout>
