--- a/app/src/main/res/layout/modal_filter_home.xml
+++ b/app/src/main/res/layout/modal_filter_home.xml
@@ -37,102 +37,79 @@
     </LinearLayout>
 
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center"
-        android:elevation="99dp"
-        android:foregroundGravity="center"
-        android:indeterminateTint="@color/colorTertiary"
-        android:progressBackgroundTint="@color/colorTertiary"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
-        android:id="@+id/filtros"
+        android:id="@+id/Segmento"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/Segmento"
+        <TextView
+            android:id="@+id/textViewSegHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Segmento:"
+            android:textColor="@color/colorBackground"
+            android:textSize="14sp" />
+
+        <Spinner
+            android:id="@+id/segmento_drop"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/colorBackground" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewSegHome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Segmento:"
-                android:textColor="@color/colorBackground"
-                android:textSize="14sp" />
+    <LinearLayout
+        android:id="@+id/Regiao"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="12dp"
+        android:orientation="vertical">
 
-            <Spinner
-                android:id="@+id/segmento_drop"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/colorBackground" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/Região"
+        <TextView
+            android:id="@+id/textViewRegHome"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="12dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:text="Região:"
+            android:textColor="@color/colorBackground"
+            android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/textViewRegHome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Região:"
-                android:textColor="@color/colorBackground"
-                android:textSize="14sp" />
-
-            <Spinner
-                android:id="@+id/regiao_drop"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:backgroundTint="@color/colorBackground" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/Unidade"
+        <Spinner
+            android:id="@+id/regiao_drop"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="12dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="@color/colorBackground" />
 
-            <TextView
-                android:id="@+id/textViewUnidHome"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Unidade:"
-                android:textColor="@color/colorBackground"
-                android:textSize="14sp" />
+    </LinearLayout>
 
-            <Spinner
-                android:id="@+id/unidade_drop"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/colorBackground" />
+    <LinearLayout
+        android:id="@+id/Unidade"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="12dp"
+        android:orientation="vertical">
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/textViewUnidHome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Unidade:"
+            android:textColor="@color/colorBackground"
+            android:textSize="14sp" />
+
+        <Spinner
+            android:id="@+id/unidade_drop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/colorBackground" />
+
     </LinearLayout>
 
     <LinearLayout
