--- a/app/src/main/res/layout/activity_forgotpass_change.xml
+++ b/app/src/main/res/layout/activity_forgotpass_change.xml
@@ -58,6 +58,7 @@
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
             android:paddingBottom="12dp"
+            android:singleLine="true"
             android:textColor="#000000"
             android:textColorHint="@color/textColorSecondary"
             android:textSize="16sp" />
@@ -85,6 +86,7 @@
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
             android:paddingBottom="12dp"
+            android:singleLine="true"
             android:textColor="#000000"
             android:textColorHint="@color/textColorSecondary"
             android:textSize="16sp" />
