--- a/app/src/main/res/layout/activity_forgotpass_code.xml
+++ b/app/src/main/res/layout/activity_forgotpass_code.xml
@@ -69,6 +69,7 @@
                 android:inputType="number"
                 android:maxLength="1"
                 android:padding="16dp"
+                android:singleLine="true"
                 android:textSize="20sp" />
 
             <EditText
@@ -82,6 +83,7 @@
                 android:inputType="number"
                 android:maxLength="1"
                 android:padding="16dp"
+                android:singleLine="true"
                 android:textSize="20sp" />
 
             <EditText
@@ -95,6 +97,7 @@
                 android:inputType="number"
                 android:maxLength="1"
                 android:padding="16dp"
+                android:singleLine="true"
                 android:textSize="20sp" />
 
             <EditText
@@ -108,6 +111,7 @@
                 android:inputType="number"
                 android:maxLength="1"
                 android:padding="16dp"
+                android:singleLine="true"
                 android:textSize="20sp" />
 
         </LinearLayout>
