--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,7 @@
           android:paddingTop="12dp"
           android:paddingEnd="16dp"
           android:paddingBottom="12dp"
+          android:singleLine="true"
           android:textColor="#000000"
           android:textColorHint="@color/textColorSecondary"
           android:textSize="16sp" />
@@ -83,6 +84,7 @@
           android:paddingEnd="16dp"
           android:paddingBottom="12dp"
           android:password="true"
+          android:singleLine="true"
           android:textColor="#000000"
           android:textColorHint="@color/textColorSecondary"
           android:textSize="16sp" />
