--- a/app/src/main/res/layout/fragment_travel_info.xml
+++ b/app/src/main/res/layout/fragment_travel_info.xml
@@ -66,7 +66,7 @@
 
                         <TextView
                             android:id="@+id/user_name"
-                            android:layout_width="wrap_content"
+                            android:layout_width="150dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="Informações da Viagem"
@@ -90,7 +90,7 @@
 
                             <TextView
                                 android:id="@+id/car_plate"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="4dp"
                                 android:text="ABC1D23"
@@ -165,7 +165,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
-                                android:text="000 Km"
+                                android:text="Não Informados Km"
                                 android:textColor="@color/textColorPrimary" />
                         </LinearLayout>
 
@@ -188,7 +188,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
-                                android:text="Segmento"
+                                android:text="Segmento de Carga Seca"
                                 android:textColor="@color/textColorPrimary" />
                         </LinearLayout>
                     </LinearLayout>
