--- a/app/src/main/res/layout/activity_forgotpass_change.xml
+++ b/app/src/main/res/layout/activity_forgotpass_change.xml
@@ -89,6 +89,7 @@
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
             android:paddingBottom="12dp"
+            android:password="true"
             android:singleLine="true"
             android:textColor="#000000"
             android:textColorHint="@color/textColorSecondary"
@@ -117,6 +118,7 @@
             android:paddingTop="12dp"
             android:paddingEnd="16dp"
             android:paddingBottom="12dp"
+            android:password="true"
             android:singleLine="true"
             android:textColor="#000000"
             android:textColorHint="@color/textColorSecondary"
